# linkedin_agent

./: .gitignore  README.md  pyproject.toml
app_autogen/: autogen_agent.py  linkedin_tools.py  main.py
app_openai/: agent.py  agents_openai.py  linkedin_tools.py  main.py
notebooks/: openai_agents.ipynb
prompts/: content_generation_prompt.txt
